# projeto02-streamlit

./: Cadastro.py  Clientes.csv  pyproject.toml
pages/: Consulta.py
